--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </header>
             <div class="row">
                 <div class="col-lg-12">
-                    <form id="myform" action="http://formspree.io/tommy4664@googlemail.com" method="POST">
+                    <form id="myform" action="http://formspree.io/petebethwedding@gmail.com" method="POST">
                         <input type="hidden" name="_next" value="#" />
                         <input type="hidden" name="_subject" value="Wedding Website Question" />
                         <input type="text" name="_gotcha" style="display:none" />
