--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           LL55 4UH
         </address>
             <p>
-                There are a few parking spaces in front of the Church, however the car park is also used by Snowdonia Mountain Rescue therefore please do not block in their landrovers. Alternatively there is a large car park (£2.50 for 4 hours) situated only a few hundred
+                Please arrive by 1030 to be seated by 1040. There are a few parking spaces in front of the Church, however the car park is also used by Snowdonia Mountain Rescue therefore please do not block in their landrovers. Alternatively there is a large car park (£2.50 for 4 hours) situated only a few hundred
                 feet down the road (LL55 4UF).
             </p>
         </div>
@@ -70,8 +70,13 @@
         <div class="container" id="caer">
             <h1>The Reception</h1>
             <p>
-                The wedding breakfast and reception will be held at Caer Rhun Hall. Timings will be confirmed ASAP however as a rough guide the wedding breakfast will start at 1500, followed by an evening reception and buffet at 1800. More information to follow shortly.
-                There is ample parking for all guests at the hall. The bar accepts both cash and debit/credit card. Carriages at midnight.
+                The wedding breakfast and reception will be held at Caer Rhun Hall. After the Wedding Ceremony, there will be a drinks reception at Caer Rhun Hall from 1345, followed by the formal Wedding Breakfast at 1530.
+            </p>
+            <p>
+                Evening guests, please join us from 1830 for merriment, cake, dancing and drinks! There will be a buffet served from 2100 – please let us know if you have any specific dietary requirements.
+            </p>
+            <p>
+                The bar accepts both cash and debit/credit card. There is ample parking for all guests at the hall – please use the ‘Wedding Car Park’ on the right hand side.
             </p>
             <address>
           Caer Rhun Hall,<br>
