--- a/index.html
+++ b/index.html
@@ -29,16 +29,12 @@
             <div class="col-md-8">
                 <h1>We are getting married!</h1>
                 <p>
-                    Croeso! Welcome to our wedding website! We are so excited to spend our big day with you! We will send formal invitations in due course, however we will also be adding additional information to this website to hopefully make your trip to North Wales a
-                    bit easier! A lot of people have asked us ‘why North Wales’? Since we have been together, Snowdonia has been a very special place for us; we would go as far as saying it is our second home! We have shared so many adventures together
-                    up in the mountains, one of them being the sunny day in October that Pete surprised Beth mid-walk with an engagement ring at Cwm Idwal (you may recognise it from the Save The Dates)! Beth isn’t the best at walking down hills at the
-                    best of times (she blames it on the fact she has short legs) but she definitely took a lot longer getting down that day as she half-cried, half-laughed her way back to the car post-proposal! In short, Snowdonia was really the only
-                    place that we could imagine getting married and we hope to one day settle there in our own little house in the hills.
+                    Croeso! Welcome to our wedding website! We are so excited to spend our big day with you! A lot of people have asked us ‘why North Wales’? Since we have been together, Snowdonia has been a very special place for us; we would go as far as saying it is our second home! We have shared so many adventures together up in the mountains, one of them being the sunny day last October when Pete surprised Beth mid-walk with an engagement ring above Cwm Idwal. Snowdonia was really the only place that we could imagine getting married and we hope to one day settle there in our own little house in the hills.
 
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="images/us.png" alt="Pete and Beth" width="300" class="img-circle" />
+                <img src="images/us2.png" alt="Pete and Beth" width="300" class="img-circle" />
             </div>
         </div>
     </div>
