--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 Peris and you will see the Church tucked behind the Vaynol Arms Pub on the right hand side.
             </p>
             <address>
-          Saint Peris,<br>
+          St Peris’,<br>
           Nant Peris,<br>
           Gwynedd,<br>
           North Wales.<br>
           LL55 4UH
         </address>
             <p>
-                Please arrive by 1030 to be seated by 1040. There are a few parking spaces in front of the Church, however the car park is also used by Snowdonia Mountain Rescue therefore please do not block in their landrovers. Alternatively there is a large car park (£2.50 for 4 hours) situated only a few hundred
+                Please arrive by 1030 to be seated by 1040. There are a few parking spaces in front of the Church, however the car park is also used by Snowdonia Mountain Rescue therefore please do not block in their landrovers. Alternatively there is a large car park (approx. £2.50 for 4 hours) situated only a few hundred
                 feet down the road (LL55 4UF).
             </p>
         </div>
